navbar category header fixed &  dynamic section fixed on mobile & products cards (available bage & price overfollow ) fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,8 @@
 .scrollbar-hide {
   -ms-overflow-style: none;
   scrollbar-width: none;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
